[project]
name = "nutrient-scanner"
version = "0.1.0"
description = "Python assignment: Build a nutrient scanner app"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
